<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_tips" />
        <item
            android:id="@+id/nav_date"
            android:icon="@drawable/ic_baseline_calendar_24"
            android:title="@string/menu_date" />
        <item
            android:id="@+id/nav_about_app"
            android:icon="@drawable/ic_baseline_error_24"
            android:title="@string/menu_about_app" />
        <item
            android:id="@+id/nav_about_me"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_about_me" />
    </group>
</menu>