<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@layout/activity_main">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.catatan.MainActivity"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_tips"
        android:name="com.example.catatan.TipsActivity"
        android:label="@string/menu_tips"
        tools:layout="@layout/activity_tips"/>
    <fragment
        android:id="@+id/nav_date"
        android:name="com.example.catatan.DateActivity"
        android:label="@string/menu_date"
        tools:layout="@layout/activity_date" />

    <fragment
        android:id="@+id/navi_about_app"
        android:name="com.example.catatan.AboutAppActivity"
        android:label="@string/menu_about_app"
        tools:layout="@layout/activity_about_app" />

    <fragment
        android:id="@+id/navi_about_me"
        android:name="com.example.catatan.AboutMeActivity"
        android:label="@string/menu_about_me"
        tools:layout="@layout/activity_about_me" />

</navigation>